# ElevenMPV

./: CMakeLists.txt  ElevenMPV-A.sln  README.md  SceLibc.yml  SceShellSvc.yml
ElevenMPV-A/: ElevenMPV-A.vcxproj  ElevenMPV-A.vcxproj.filters  package.conf  param.sfx
ElevenMPV-A-Common/include/: ipc.h
ElevenMPV-A-ShellPlugin/: ElevenMPV-A-ShellPlugin.vcxproj  ElevenMPV-A-ShellPlugin.vcxproj.filters  main.cpp  main.h  paf_runtime.cpp
ElevenMPV-A/CONTENTS/: empva_plugin.rco
ElevenMPV-A/CONTENTS/module/: exit_module.suprx  shell_plugin.suprx
ElevenMPV-A/CONTENTS/sce_sys/: param.sfo
ElevenMPV-A/CONTENTS/sce_sys/livearea/contents/: template.xml
ElevenMPV-A/include/: common.h  config.h  dirbrowse.h  fs.h  motion_e.h  textures.h  touch_e.h  utils.h
ElevenMPV-A/include/audio/: at3.h  audio.h  flac.h  id3.h  mp3.h  ogg.h  opus.h  sh_common.h  vitaaudiolib.h  xm.h
ElevenMPV-A/include/menus/: menu_audioplayer.h  menu_displayfiles.h  menu_settings.h
ElevenMPV-A/libs/include/: dr_flac.h  xmp.h
ElevenMPV-A/libs/include/vorbis/: vorbisfile.h
ElevenMPV-A/source/: common.c  config.c  config.cpp  dirbrowse.c  fs.c  main.c  main.cpp  motion.c  motion.cpp  paf_libc_bridge.cpp  paf_libc_bridge_asm.cpp  paf_runtime.cpp  textures.c  touch.c  utils.c  utils.cpp
ElevenMPV-A/source/audio/: at3.c  at3.cpp  audio.c  audio.cpp  flac.c  flac.cpp  flacgg.cpp  id3.c  mp3.c  mp3.cpp  ogg.c  ogg.cpp  opus.c  opus.cpp  sh_common.c  sh_common.cpp  vitaaudiolib.c  vitaaudiolib.cpp  xm.c  xm.cpp
ElevenMPV-A/source/menus/: menu_audioplayer.c  menu_audioplayer.cpp  menu_displayfiles.c  menu_displayfiles.cpp  menu_settings.c  menu_settings.cpp
Resource/: empva_plugin.xml
Resource/locale/: empva_locale_en.xml  empva_locale_es.xml  empva_locale_ru.xml  empva_locale_zh-s.xml  empva_locale_zh-t.xml
Resource/tex/: tex_button_ff.zlib  tex_button_repeat.zlib  tex_button_repeat_glow.zlib  tex_button_repeat_glow_one.zlib  tex_button_rew.zlib  tex_button_shuffle.zlib  tex_button_shuffle_glow.zlib  tex_icon_dir.zlib  tex_icon_unk.zlib
include/: common.h  config.h  dirbrowse.h  fios2_common.h  fs.h  motion.h  psp2_compat.h  status_bar.h  textures.h  touch.h  utils.h
include/audio/: aac.h  at3.h  at9.h  audio.h  flac.h  jar_xm.h  mp3.h  ogg.h  opus.h  vitaaudiolib.h  wav.h  xm.h
include/menus/: menu_audioplayer.h  menu_displayfiles.h  menu_settings.h
include/psp2/: libc.h
libs/include/: dr_flac.h
libs/lib/: VarHelper.suprx
module/: exit_module.yml
module/source/: main.c
res/: data.psarc  tex_common.gxt  tex_dirbrowse.gxt  texture.gxt
sce_sys/livearea/contents/: template.xml
source/: common.c  config.c  dirbrowse.c  fios2_common.c  fs.c  main.c  motion.c  psp2_compat.c  status_bar.c  textures.c  touch.c  utils.c
source/audio/: aac.c  at3.c  at9.c  audio.c  flac.c  id3.c  mp3.c  ogg.c  opus.c  vitaaudiolib.c  wav.c  xm.c
source/menus/: menu_audioplayer.c  menu_displayfiles.c  menu_settings.c
